@@ -2,15 +2,13 @@ Package: googleVis
 Type: Package
 Title: Interface between R and the Google Chart Tools
 Version: 0.4.6
-Date: 2013-08-30
+Date: 2013-11-03
 Authors@R: c(person("Markus", "Gesmann", role = c("aut", "cre"),
                      email = "markus.gesmann@googlemail.com"),
             person("Diego", "de Castillo", role = "aut",
                      email = "decastillo@gmail.com"),
                    person("Joe", "Cheng", role = "ctb",
      	             email = "joe@rstudio.com"))
-Author: Markus Gesmann, Diego de Castillo
-Maintainer: Markus Gesmann <markus.gesmann@googlemail.com>
 Description: 
    The googleVis package provides an interface between R and the Google
    Chart Tools API. It allows users to create web pages with interactive
@@ -27,7 +25,7 @@ Imports:
     RJSONIO,
     utils
 Suggests:
-    shiny (>= 0.4.0)
+    shiny (>= 0.4.0), httpuv (>= 1.2.0)
 License: GPL (>= 2)
 URL: http://code.google.com/p/google-motion-charts-with-r/, http://lamages.blogspot.co.uk/search/label/googleVis
 BugReports: http://code.google.com/p/google-motion-charts-with-r/issues/list 
