@@ -359,3 +359,19 @@ Animations},
     note = {R package version 0.4.0},
     url = {\url{http://www.rstudio.com/shiny/}},
   }
+
+@Manual{slidify,
+    title = {slidify: Generate reproducible html5 slides from R markdown},
+    author = {Ramnath Vaidyanathan},
+    year = {2012},
+    note = {R package version 0.3.3},
+    url = {http://ramnathv.github.com/slidify/},
+  }
+
+@Manual{googleVisTutorial,
+  author = {Markus Gesmann and Diego de Castillo},
+  institution = {useR! 2013, University of Castilla-La Mancha, Albacete, Spain},
+  title = {googleVis Tutorial},
+  uowpublished = {\url{http://decastillo.github.io/googleVis_Tutorial}},
+  Year = {2013},
+  }
