@@ -1,6 +1,12 @@
 googleVis 0.4.6 [2013-08-30]
 ----------------------------
 
+Changes
+
+* googleVis will use the Viewer pane in RStudio (version >= 0.98) 
+  to display non-Flash charts by default. The setting is controlled
+  via the option viewer. Set options("viewer"=NULL) and the googleVis
+  plot function will open all output in the default browser again.
 
 googleVis 0.4.5 [2013-08-29]
 ----------------------------
